...
        is SettingsImportFiltersPanelModel -> "settings-panel-import-filters"
        is SettingsFrequencyRangePanelModel -> "settings-panel-frequency-range"
        is SettingsNewCardSortPanelModel -> "settings-panel-new-card-sort"
        is SettingsDeckLimitsPanelModel -> "settings-panel-deck-limits"
        is SettingsWorkloadPanelModel -> "settings-panel-workload"
        is SettingsRetentionPanelModel -> "settings-panel-retention"
        is SettingsPersonalizedSchedulingPanelModel -> "settings-panel-personalized-scheduling"
        is SettingsFlashcardGesturePanelModel -> "settings-panel-flashcard-gesture"
        is SettingsLearningStepsPanelModel -> "settings-panel-learning-steps"
        is SettingsStudyAheadPanelModel -> "settings-panel-study-ahead"
        is SettingsStudyLadderPanelModel -> "settings-panel-study-ladder"
        is SettingsLadderThresholdPanelModel -> "settings-panel-ladder-thresholds"
        is SettingsReminderPanelModel -> "settings-panel-reminder"
...
